tests/NormalTests/paczka1/fuzzy1/59025371.err
Error in line 5: ekaz S84 10,7
Error in line 14: zFlsw S84 99,4
Error in line 16: zFlsw S149 55,7
Error in line 28: PtKMUzW S149 2,1
